// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instructor ControlSheet (e2e) /instructor/student/:id/control-sheet (POST) 1`] = `
{
  "altitudeFlight": {
    "acht": 0,
    "aufziehen": 0,
    "bStall": 0,
    "beschlunigung": 0,
    "engekreise": 0,
    "examProgramme": 0,
    "geschwBereich": 0,
    "gewichtsverlagerung": 0,
    "hanglandung": 0,
    "instrumente": 0,
    "klappen": 0,
    "kreise": 0,
    "landevolte": 0,
    "negativsteuerung": 0,
    "notlandung": 0,
    "ohren": 0,
    "pendeln": 0,
    "punktlandung": 0,
    "richtungswechsel": 0,
    "rollen": 0,
    "rueckenwindlandung": 0,
    "sackflug": 0,
    "soaring": 0,
    "spirale": 0,
    "startplatzwahl": 0,
    "tandem": 0,
    "thermik": 0,
    "touchAndGo": 0,
    "traggurten": 0,
    "traggurtenLandung": 0,
  },
  "level": {
    "landing": 0,
    "maneuver": 0,
    "start": 0,
  },
  "theory": {
    "fluglehre": 0,
    "flugpraxis": 0,
    "gesetzgebung": 0,
    "materialkunde": 0,
    "wetterkunde": 0,
  },
  "trainingHill": {
    "aufziehen": 2,
    "auslegen": 0,
    "entwirren": 0,
    "faltmethoden": 0,
    "kurven": 0,
    "landungen": 0,
    "laufenAngebremst": 0,
    "notlandung": 0,
    "notschirm": 0,
    "richtungsaenderungen": 0,
    "schlechtAusgelegt": 0,
    "seitenwindstart": 0,
    "slalom": 0,
    "startabbruch": 0,
    "startphasen": 0,
    "starts": 0,
    "theorietest": 0,
    "vorbereitung": 0,
  },
  "userCanEdit": true,
}
`;

exports[`Instructor ControlSheet (e2e) /instructor/student/:id/control-sheet (POST) 2`] = `
{
  "altitudeFlight": {
    "acht": 0,
    "aufziehen": 0,
    "bStall": 0,
    "beschlunigung": 0,
    "engekreise": 0,
    "examProgramme": 0,
    "geschwBereich": 0,
    "gewichtsverlagerung": 0,
    "hanglandung": 0,
    "instrumente": 0,
    "klappen": 0,
    "kreise": 0,
    "landevolte": 0,
    "negativsteuerung": 0,
    "notlandung": 0,
    "ohren": 0,
    "pendeln": 0,
    "punktlandung": 0,
    "richtungswechsel": 0,
    "rollen": 0,
    "rueckenwindlandung": 0,
    "sackflug": 0,
    "soaring": 0,
    "spirale": 0,
    "startplatzwahl": 0,
    "tandem": 0,
    "thermik": 0,
    "touchAndGo": 0,
    "traggurten": 0,
    "traggurtenLandung": 0,
  },
  "level": {
    "landing": 0,
    "maneuver": 0,
    "start": 0,
  },
  "passPracticeExam": null,
  "passTheoryExam": null,
  "theory": {
    "fluglehre": 0,
    "flugpraxis": 0,
    "gesetzgebung": 0,
    "materialkunde": 0,
    "wetterkunde": 0,
  },
  "trainingHill": {
    "aufziehen": 2,
    "auslegen": 0,
    "entwirren": 0,
    "faltmethoden": 0,
    "kurven": 0,
    "landungen": 0,
    "laufenAngebremst": 0,
    "notlandung": 0,
    "notschirm": 0,
    "richtungsaenderungen": 0,
    "schlechtAusgelegt": 0,
    "seitenwindstart": 0,
    "slalom": 0,
    "startabbruch": 0,
    "startphasen": 0,
    "starts": 0,
    "theorietest": 0,
    "vorbereitung": 0,
  },
  "user": {
    "config": null,
    "confirmationToken": null,
    "createdAt": null,
    "email": "student@student.com",
    "enabled": true,
    "firstname": "student",
    "keycloakId": null,
    "lastLogin": null,
    "lastname": "student",
    "loginType": "LOCAL",
    "notificationToken": null,
    "password": null,
    "passwordRequestedAt": null,
    "paymentExempted": true,
    "phone": null,
    "salt": null,
    "socialloginId": null,
    "token": null,
    "validatedAt": null,
  },
  "userCanEdit": true,
}
`;

exports[`Instructor ControlSheet (e2e) /instructor/students/:id/control-sheet (GET) 1`] = `{}`;

exports[`Student ControlSheet (e2e) /student/control-sheet (GET) 1`] = `
{
  "altitudeFlight": {
    "acht": 0,
    "aufziehen": 0,
    "bStall": 0,
    "beschlunigung": 0,
    "engekreise": 0,
    "examProgramme": 0,
    "geschwBereich": 0,
    "gewichtsverlagerung": 0,
    "hanglandung": 0,
    "instrumente": 0,
    "klappen": 0,
    "kreise": 0,
    "landevolte": 0,
    "negativsteuerung": 0,
    "notlandung": 0,
    "ohren": 0,
    "pendeln": 0,
    "punktlandung": 0,
    "richtungswechsel": 0,
    "rollen": 0,
    "rueckenwindlandung": 0,
    "sackflug": 0,
    "soaring": 0,
    "spirale": 0,
    "startplatzwahl": 0,
    "tandem": 0,
    "thermik": 0,
    "touchAndGo": 0,
    "traggurten": 0,
    "traggurtenLandung": 0,
  },
  "level": {
    "landing": 0,
    "maneuver": 0,
    "start": 0,
  },
  "theory": {
    "fluglehre": 0,
    "flugpraxis": 0,
    "gesetzgebung": 0,
    "materialkunde": 0,
    "wetterkunde": 0,
  },
  "trainingHill": {
    "aufziehen": 0,
    "auslegen": 0,
    "entwirren": 0,
    "faltmethoden": 0,
    "kurven": 0,
    "landungen": 0,
    "laufenAngebremst": 0,
    "notlandung": 0,
    "notschirm": 0,
    "richtungsaenderungen": 0,
    "schlechtAusgelegt": 0,
    "seitenwindstart": 0,
    "slalom": 0,
    "startabbruch": 0,
    "startphasen": 0,
    "starts": 0,
    "theorietest": 0,
    "vorbereitung": 0,
  },
  "userCanEdit": true,
}
`;

exports[`Student ControlSheet (e2e) /student/control-sheet (POST) 1`] = `
{
  "altitudeFlight": {
    "acht": 0,
    "aufziehen": 0,
    "bStall": 0,
    "beschlunigung": 0,
    "engekreise": 0,
    "examProgramme": 0,
    "geschwBereich": 0,
    "gewichtsverlagerung": 0,
    "hanglandung": 0,
    "instrumente": 0,
    "klappen": 0,
    "kreise": 0,
    "landevolte": 0,
    "negativsteuerung": 0,
    "notlandung": 0,
    "ohren": 0,
    "pendeln": 0,
    "punktlandung": 0,
    "richtungswechsel": 0,
    "rollen": 0,
    "rueckenwindlandung": 0,
    "sackflug": 0,
    "soaring": 0,
    "spirale": 0,
    "startplatzwahl": 0,
    "tandem": 0,
    "thermik": 0,
    "touchAndGo": 0,
    "traggurten": 0,
    "traggurtenLandung": 0,
  },
  "level": {
    "landing": 0,
    "maneuver": 0,
    "start": 0,
  },
  "theory": {
    "fluglehre": 0,
    "flugpraxis": 0,
    "gesetzgebung": 0,
    "materialkunde": 0,
    "wetterkunde": 0,
  },
  "trainingHill": {
    "aufziehen": 2,
    "auslegen": 0,
    "entwirren": 0,
    "faltmethoden": 0,
    "kurven": 0,
    "landungen": 0,
    "laufenAngebremst": 0,
    "notlandung": 0,
    "notschirm": 0,
    "richtungsaenderungen": 0,
    "schlechtAusgelegt": 0,
    "seitenwindstart": 0,
    "slalom": 0,
    "startabbruch": 0,
    "startphasen": 0,
    "starts": 0,
    "theorietest": 0,
    "vorbereitung": 0,
  },
}
`;

exports[`Student ControlSheet (e2e) /student/control-sheet (POST) 2`] = `
{
  "altitudeFlight": {
    "acht": 0,
    "aufziehen": 0,
    "bStall": 0,
    "beschlunigung": 0,
    "engekreise": 0,
    "examProgramme": 0,
    "geschwBereich": 0,
    "gewichtsverlagerung": 0,
    "hanglandung": 0,
    "instrumente": 0,
    "klappen": 0,
    "kreise": 0,
    "landevolte": 0,
    "negativsteuerung": 0,
    "notlandung": 0,
    "ohren": 0,
    "pendeln": 0,
    "punktlandung": 0,
    "richtungswechsel": 0,
    "rollen": 0,
    "rueckenwindlandung": 0,
    "sackflug": 0,
    "soaring": 0,
    "spirale": 0,
    "startplatzwahl": 0,
    "tandem": 0,
    "thermik": 0,
    "touchAndGo": 0,
    "traggurten": 0,
    "traggurtenLandung": 0,
  },
  "level": {
    "landing": 0,
    "maneuver": 0,
    "start": 0,
  },
  "passPracticeExam": null,
  "passTheoryExam": null,
  "theory": {
    "fluglehre": 0,
    "flugpraxis": 0,
    "gesetzgebung": 0,
    "materialkunde": 0,
    "wetterkunde": 0,
  },
  "trainingHill": {
    "aufziehen": 2,
    "auslegen": 0,
    "entwirren": 0,
    "faltmethoden": 0,
    "kurven": 0,
    "landungen": 0,
    "laufenAngebremst": 0,
    "notlandung": 0,
    "notschirm": 0,
    "richtungsaenderungen": 0,
    "schlechtAusgelegt": 0,
    "seitenwindstart": 0,
    "slalom": 0,
    "startabbruch": 0,
    "startphasen": 0,
    "starts": 0,
    "theorietest": 0,
    "vorbereitung": 0,
  },
  "user": {
    "config": null,
    "confirmationToken": null,
    "createdAt": null,
    "email": "test@user.com",
    "enabled": true,
    "firstname": "test",
    "keycloakId": null,
    "lastLogin": null,
    "lastname": "user",
    "loginType": "LOCAL",
    "notificationToken": null,
    "password": null,
    "passwordRequestedAt": null,
    "paymentExempted": true,
    "phone": null,
    "salt": null,
    "socialloginId": null,
    "token": null,
    "validatedAt": null,
  },
  "userCanEdit": true,
}
`;
